INCLUDE(../../../include/config.txt)

SET(MYDEFS )
SET(rm " /bin/rm -f")
SET(cp " /bin/cp -f")
SET(CC " ${MYCXX}")
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../lib/libRemote.a)
SET(LIBNAME Remote)
SET(LIBRARY_OUTPUT_PATH ../../../lib/)


SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../Include/")


IF(GCODE_MENU STREQUAL YES)
SET(MYDEFS ${MYDEFS} " -DGCODE_MENU")
ENDIF(GCODE_MENU STREQUAL YES)

SET(MYDEFS ${MYDEFS} " -D${REMOTE_ID}")
SET(CFLAGS " ${DEFINES} -DSYS_UNIX=1 ${MYDEFS}")
SET(SRCS ./RemoteControl.cpp)
SET(OBJS ./RemoteControl.o)


INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})

string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
